--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <header class="page-header">
+    <header>
         <div class="header-content">
             <img src="images/glennsoriano.jpg" alt="Photo of Glenn Soriano" class="profile-pic" />
             <div>
-                <!-- Moved <h1> to <main> for SEO and accessibility -->
+                
                 <p>Glenn D Soriano</p>
             </div>
         </div>
