--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="images/glennsoriano.jpg" alt="Photo of Glenn Soriano" class="profile-pic" />
             <div>
                 
-                <p>Glenn D Soriano</p>
+                <h1>Glenn D Soriano</h1>
             </div>
         </div>
         <button id="menu-toggle" aria-label="Toggle Navigation">&#9776;</button>
