--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/glennsoriano.jpg" alt="Photo of Glenn Soriano" class="profile-pic" />
+            <img src="images/glennsoriano.jpg" alt="Photo of Glenn Soriano" class="profile-pic">
             <div>
                 <h1><span>Glenn D. Soriano</span></h1>
             </div>
@@ -52,11 +52,12 @@
 
         <section class="card location">
             <h2>Winnipeg, Canada</h2>
-            <img src="images/canada-small1.webp" alt="Photo of Banff" class="Photo" />
+            <img src="images/canada-small1.webp" alt="Photo of Banff" class="Photo">
             <p>🇨🇦 Banff 🇨🇦.</p>
         </section>
 
         <section class="card-group">
+            <h2>Featured Courses</h2>
             <section class="card certificate">
                 <h2>Web and Computer Programming Certificate</h2>
 
