--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-grid">
-        <h1>WDD 231: Web Frontend Development I - Glenn D. Soriano</h1> <!-- Page title for SEO -->
+        <h1>WDD 231 - Glenn D. Soriano</h1> <!-- Page title for SEO -->
 
         <!-- Course Work Section -->
         <section class="card course-work">
