--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-content">
             <img src="images/glennsoriano.jpg" alt="Photo of Glenn Soriano" class="profile-pic">
-           
+            <p> GLENN D SORIANO</p>
         </div>
         <button id="menu-toggle" aria-label="Toggle Navigation">&#9776;</button>
         <nav id="navbar">
