--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-CA">
 
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,19 @@
     <meta name="description"
         content="This assignment demonstrates my prerequisite knowledge by applying HTML, CSS, and JavaScript to the design and development of my course home page.">
     <meta name="author" content="Glenn Soriano">
+    <meta property="og:title" content="WDD 231 - Glenn D. Soriano">
+    <meta property="og:description"
+        content="Explore the course home page of Glenn Soriano for WDD 231, showcasing web development projects and skills using HTML, CSS, and JavaScript.">
+    <meta property="og:image" content="https://glenn-d-soriano.github.io/wdd231/images/glennsoriano.jpg">
+    <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_CA">
+    <meta property="og:site_name" content="WDD 231 - Glenn Soriano">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>WDD 231 - Glenn D. Soriano</title>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/chamber.css">
 </head>
 
