--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,7 +43,9 @@
 
     <main>
         <h2>Business Directory</h2>
-        <section id="directory" class="directory-grid"></section>
+        <button id="gridBtn" class="active">Grid View</button>
+        <button id="listBtn">List View</button>
+        <section id="directory" class="grid-view"></section>
     </main>
      
        
