--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -64,8 +64,8 @@
             <a href="https://twitter.com" title="Twitter">
                 <img src="images/twitter.png" alt="Twitter Logo">
             </a>
-            <a href="https://linken.com" title="LinkedIn">
-                <img src="images/linkedIn.png" alt="LinkedIn Logo">
+            <a href="https://linken.com" title="Linkedin">
+                <img src="images/linkedin.png" alt="Linkedin Logo">
             </a>
         </section>
         
