--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,7 +54,7 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            <p>Email: <a href="mailto:info@timbuktucc.org">info@winnipegchamber.org</a></p>
+            <p>Email: info@winnipegchamber.org</p>
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
