--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,7 +65,7 @@
                 <img src="images/twitter.png" alt="Twitter Logo">
             </a>
             <a href="https://linken.com" title="Linkedin">
-                <img src="images/linkedin.png" alt="Linkedin Logo">
+                <img src="images/linkedIn.png" alt="Linkedin Logo">
             </a>
         </section>
         
