--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <h1>Winnipeg Chamber of Commerce</h1>
+        <h1>Directory | Winnipeg Chamber of Commerce</h1>
         <h2>Business Directory</h2>
         <button id="gridBtn" class="active">Grid View</button>
         <button id="listBtn">List View</button>
