--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Glenn Soriano">
     <meta property="og:title" content="Winnipeg Chamber of Commerce">
     <meta property="og:description" content="Discover local businesses, events, and services in Winnipeg.">
-    <meta property="og:image" content="./images/glennsoriano.jpg" />
-    <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/directory.html">
+    <meta property="og:image" content="https://glenn-d-soriano.github.io/wdd231/chamber/images/chamber-banner.jpg" />
+    <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/chamber/directory.html" />
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_CA">
     <meta property="og:site_name" content="WDD 231 - Glenn Soriano">
