--- a/modules/modules.html
+++ b/modules/modules.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modules Example: Course and Sections</title>
     <link rel="stylesheet" href="modules.css">
-    <script src="scripts/modules.js" defer></script>
+    <script type="module" src="scripts/modules.mjs"></script>
+
 </head>
 
 <body>
