index.html project

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/hero.jpg" alt="City of Winnipeg" loading="lazy" />
+            <img src="images/heroimage.jpeg" alt="City of Winnipeg" loading="lazy" />
             <div class="cta">
                 <h1>Grow With Us!</h1>
                 <a href="join.html" class="cta-button">Join the Chamber</a>
@@ -89,7 +89,7 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            <p>Email: <a href="mailto:info@timbuktucc.org">info@winnipegchamber.org</a></p>
+            <p>Email: <a href="info@timbuktucc.org">info@winnipegchamber.org</a></p>
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
