--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,18 +25,17 @@
     <header>
         <div class="logo">
             <img src="images/winnipeglogo.jpg" alt="Winnipeg Chamber of Commerce Logo" />
-            <h1>Winnipeg <span>Chamber of Commerce</span></h1>
+            <div class="logo-text">Winnipeg <span>Chamber of Commerce</span></div>
         </div>
         <nav>
             <button id="menuBtn" aria-label="Menu">☰</button>
             <ul id="navMenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="active">Directory</a></li>
+                <li><a href="index.html" class="active" id="menu-home">Home</a></li>
+                <li><a href="directory.html" id="menu-directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
             </ul>
-
         </nav>
     </header>
 
