--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,8 +30,8 @@
         <nav>
             <button id="menuBtn" aria-label="Menu">☰</button>
             <ul id="navMenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="active">Directory</a></li>
+                <li><a href="index.html" id="menu-home">Home</a></li>
+                <li><a href="directory.html" class="active" id="menu-directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
