--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,8 +66,10 @@
                     <img id="weather-icon" src="" alt="Weather icon" />
                     <figcaption id="weather-desc"></figcaption>
                 </figure>
+                <div id="weather-details"></div> 
             </div>
         </section>
+        
         
         <!-- 3-Day Forecast Section -->
         <section class="forecast card">
