--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -62,7 +62,7 @@
                 <img src="images/twitter.png" alt="Twitter Logo">
             </a>
             <a href="https://linkedin.com" title="LinkedIn">
-                <img src="images/linkedIn.png" alt="LinkedIn Logo">
+                <img src="images/linkedin.png" alt="LinkedIn Logo">
             </a>
         </section>
 
