--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
             <div class="weather-current">
                 <p id="current-temp"></p>
                 <figure>
-                    <img id="weather-icon" src="" alt="Weather icon" />
+                    <img id="weather-icon" src="images/placeholder-weather.png" alt="Weather icon" />
                     <figcaption id="weather-desc"></figcaption>
                 </figure>
                 <div id="weather-details"></div> 
