--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,10 +44,11 @@
     <main>
         <section class="hero">
             <img src="images/heroimage.jpeg" alt="City of Winnipeg" loading="lazy" />
-            <div class="cta">
+            <section class="cta">
                 <h1>Grow With Us!</h1>
                 <a href="join.html" class="cta-button">Join the Chamber</a>
-            </div>
+            </section>
+              
         </section>
 
         <!-- Events Section -->
@@ -65,7 +66,7 @@
             <div class="weather-current">
                 <p id="current-temp"></p>
                 <figure>
-                    <img id="weather-icon" src="images/placeholder-weather.png" alt="Weather icon" />
+                    <img id="weather-icon" src="images/default-weather.png" alt="Weather icon" />
                     <figcaption id="weather-desc"></figcaption>
                 </figure>
                 <div id="weather-details"></div> 
