--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,9 +44,9 @@
     <main>
         <section class="hero">
             <img src="images/heroimage.jpeg" alt="City of Winnipeg" loading="lazy" />
-            <section class="cta">
+            <section class="cta" aria-label="Chamber Call to Action">
                 <h1>Grow With Us!</h1>
-                <a href="join.html" class="cta-button">Join the Chamber</a>
+                <a href="join.html" class="cta-button">Join the Chamber</a>    
             </section>
               
         </section>
