--- a/chamber/index.html
+++ b/chamber/index.html
@@ -83,9 +83,9 @@
         </section>
         
         <!-- Member Spotlights -->
-        <section class="spotlights card" id="spotlights">
+        <section class="spotlight">
             <h2>Member Spotlights</h2>
-            <!-- JS will inject spotlight member cards here -->
+            <div id="spotlights" class="spotlight-container"></div>
         </section>
     </main>
 
