--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,7 +21,7 @@
     <title>Directory | Winnipeg Chamber of Commerce</title>
 </head>
 
-<body>
+<body class="directory-page">
     <header>
         <div class="logo">
             <img src="images/winnipeglogo.jpg" alt="Winnipeg Chamber of Commerce Logo" />
