--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body class="index-page">
     <header>
         <div class="logo">
             <img src="images/winnipeglogo.jpg" alt="Winnipeg Chamber of Commerce Logo" />
