--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <p>Last Modified: <span id="last-modified"></span></p>
     </footer>
 
+    <dialog id="course-details"></dialog>
+
     <script src="scripts/chamber.js" defer></script>
 </body>
 
