--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,9 +32,9 @@
         <nav>
             <button id="menuBtn" aria-label="Menu">☰</button>
             <ul id="navMenu">
-                <li><a href="index.html" class="active" id="menu-home">Home</a></li>
+                <li><a href="index.html" id="menu-home">Home</a></li>
                 <li><a href="directory.html" id="menu-directory">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
+                <<li><a href="join.html" class="active" id="menu-join">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
             </ul>
@@ -71,7 +71,7 @@
     
                 <label for="form-phone" title="Applicant's Mobile Phone Number">
                     Phone #:
-                    <input type="tel" id="form-phone" name="phone" autocomplete="tel" required placeholder="987-654-3210" />
+                    <input type="tel" id="form-phone" name="phone" autocomplete="tel" required placeholder="204-123-1234" />
                 </label>
     
                 <label for="form-company" title="Business or Organization's Name">
