--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -34,7 +34,7 @@
         <nav>
             <button id="menuBtn" aria-label="Menu">☰</button>
             <ul id="navMenu">
-                <li><a href="index.html" class="active" id="menu-home">Home</a></li>
+                <li><a href="index.html" id="menu-home">Home</a></li>
                 <li><a href="directory.html" id="menu-directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
