--- a/chamber/join.html
+++ b/chamber/join.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://glenn-d-soriano.github.io/wdd231/chamber/images/winnipeglogo.jpg">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
-    <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/chamber/join  .html">
+    <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/chamber/join.html">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_CA">
     <meta property="og:site_name" content="WDD 231 - Glenn Soriano">
@@ -34,7 +34,7 @@
             <ul id="navMenu">
                 <li><a href="index.html" id="menu-home">Home</a></li>
                 <li><a href="directory.html" id="menu-directory">Directory</a></li>
-                <<li><a href="join.html" class="active" id="menu-join">Join</a></li>
+                <li><a href="join.html" class="active" id="menu-join">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
             </ul>
@@ -157,7 +157,7 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            <p>Email: <a href="info@timbuktucc.org">info@winnipegchamber.org</a></p>
+            <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
