--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body>
+<body class="thankyou-page">
 
     <header>
         <div class="logo">
@@ -86,6 +86,6 @@
     
     <script src="scripts/join.js" defer></script>
     
-</body>
+</>
 
 </html>
