--- a/chamber/join.html
+++ b/chamber/join.html
@@ -158,7 +158,8 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            Email: <a href="mailto:info@winnipegchamber.org" aria-label="Send an email to info at Winnipeg Chamber of Commerce">info@winnipegchamber.org</a>
+            <a href="mailto:info@winnipegchamber.org">Email Winnipeg Chamber of Commerce</a>
+
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
