--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -69,8 +69,8 @@
             <a href="https://twitter.com" title="Twitter">
                 <img src="images/twitter.png" alt="Twitter Logo">
             </a>
-            <a href="https://linkedin.com" title="LinkedIn">
-                <img src="images/linkedin.png" alt="LinkedIn Logo">
+            <a href="https://www.instagram.com/" title="Instagram">
+                <img src="images/instagram.png" alt="Instagam Logo">
             </a>
         </section>
     
