--- a/chamber/join.html
+++ b/chamber/join.html
@@ -158,7 +158,7 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
+            <p>Email:info@winnipegchamber.org</a></p>
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
