--- a/chamber/join.html
+++ b/chamber/join.html
@@ -126,7 +126,7 @@
             </section>
     
             <!-- Modal dialogs (empty now; fill content later) -->
-            <dialog id="modal-np" role="dialog" aria-modal="true" aria-labelledby="modal-np-title" open>
+            <dialog id="modal-np" role="dialog" aria-modal="true" aria-labelledby="modal-np-title" tabindex="0">
                 <h3 id="modal-np-title">Non Profit Membership Benefits</h3>
                 <p>Benefits include no fee, community support, and networking opportunities.</p>
                 <button type="button" aria-label="Close Non Profit Benefits Modal">Close</button>
