discover.html project

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/directory.css">
-    <title>Directory | Winnipeg Chamber of Commerce</title>
+    <title>Join | Winnipeg Chamber of Commerce</title>
 
 </head>
 
