--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,6 +40,8 @@
     </header>
 
     <main class="discover-grid">
+        <h1>Discover | Winnipeg Chamber of Commerce</h1>
+        
         <aside class="visitor-msg" id="visitor-message">
             <!-- JS will inject visit message here -->
         </aside>
@@ -54,7 +56,7 @@
         <section class="contact">
             <p><strong>Winnipeg Chamber of Commerce</strong></p>
             <p>111 Main St. Winnipeg, MB R2J2J3</p>
-            <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
+            <p>Email: info@winnipegchamber.org</p>
             <p>Phone: (204) 123-1234</p>
         </section>
         <section class="sociallinks" aria-label="Social Media Links">
