--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
                 <li><a href="index.html" id="menu-home">Home</a></li>
                 <li><a href="directory.html" id="menu-directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="discover.html" class="active" id="menu-directory">Directory</a></li>
+                <li><a href="discover.html" class="active" id="menu-directory">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
             </ul>
         </nav>
@@ -41,7 +41,7 @@
 
     <main class="discover-grid">
         <h1>Discover | Winnipeg Chamber of Commerce</h1>
-        
+
         <aside class="visitor-msg" id="visitor-message">
             <!-- JS will inject visit message here -->
         </aside>
@@ -49,7 +49,7 @@
         <section class="gallery">
             <!-- Cards will be inserted here with JS -->
         </section>
-        </main>
+    </main>
 
 
     <footer>
