--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -31,7 +31,7 @@
             <button id="menuBtn" aria-label="Menu">☰</button>
             <ul id="navMenu">
                 <li><a href="index.html" id="menu-home">Home</a></li>
-                <li><a href="directory.html" id="menu-directory">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="discover.html" class="active" id="menu-discover">Discover</a></li>
                 <li><button id="mode-toggle" aria-label="Toggle dark mode">🌓</button></li>
