--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,7 +46,7 @@
             <!-- JS will inject visit message here -->
         </aside>
     
-        <section class="gallery">
+        <section class="gallery" id="gallery">
             <!-- Cards will be inserted here with JS -->
         </section>
     </main>
