--- a/final/index.html
+++ b/final/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/philippines.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css" />
     <title>Explore Philippines | Home</title>
 </head>
@@ -95,7 +95,7 @@
             </section>
     
             <section class="designer">
-                <p>&copy; <span id="current-year"></span> Explore Philippines | Glenn Soriano</p>
+                <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
                     <a href="references.html">Attributions</a> |
