--- a/final/destinations.html
+++ b/final/destinations.html
@@ -30,9 +30,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+                <li><a href="destinations.html" class="active" id="menu-discover">Destinations</a></li>
+                <li><a href="contact.html">Contact</a></li>     </ul>
         </nav>
     </header>
 
