--- a/final/destinations.html
+++ b/final/destinations.html
@@ -80,6 +80,7 @@
     </footer>
 
     <script type="module" src="scripts/destinations.js"></script>
+    <script type="module" src="scripts/main.js"></script>
     <script>
         // Dynamic footer year and last modified
         document.getElementById("current-year").textContent = new Date().getFullYear();
