--- a/final/index.html
+++ b/final/index.html
@@ -58,15 +58,32 @@
             </p>
         </section>
 
-        <section>
+        <section class="features">
             <h2>What You'll Find Here</h2>
-            <ul>
-                <li>🌴 Stunning destinations and hidden gems</li>
-                <li>💸 Affordable resorts and travel tips</li>
-                <li>📸 Real traveler reviews and guides</li>
-                <li>🗺️ Interactive maps and modals for each destination</li>
-            </ul>
+            <div class="feature-grid">
+                <div class="feature-card">
+                    <img src="images/destination.webp" alt="Tropical Destination" loading="lazy" />
+                    <h3>Stunning Destinations</h3>
+                    <p>🌴 Discover hidden gems, white sand beaches, and breathtaking views across the Philippines.</p>
+                </div>
+                <div class="feature-card">
+                    <img src="images/affordable.webp" alt="Affordable Resorts" loading="lazy" />
+                    <h3>Budget-Friendly Travel</h3>
+                    <p>💸 Find top tips on saving money while enjoying luxury resorts and unforgettable experiences.</p>
+                </div>
+                <div class="feature-card">
+                    <img src="images/reviews.webp" alt="Traveler Reviews" loading="lazy" />
+                    <h3>Traveler Reviews</h3>
+                    <p>📸 Read real stories and guides from fellow adventurers who’ve explored the islands.</p>
+                </div>
+                <div class="feature-card">
+                    <img src="images/maps.webp" alt="Interactive Maps" loading="lazy" />
+                    <h3>Interactive Maps</h3>
+                    <p>🗺️ Navigate destinations with ease using our dynamic maps and interactive destination modals.</p>
+                </div>
+            </div>
         </section>
+          
 
         <section>
             <h2>Subscribe to Our Newsletter</h2>
